--- a/huacai.plist
+++ b/huacai.plist
@@ -11,7 +11,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>http://m.168bf.com/huacai.ipa</string>
+<string>http://m.168bf.com/168bifen.ipa</string>
 </dict>
 <dict>
 <key>kind</key>
